<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hfad.FoogAndGo.TopLevelActivity"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/favorites"
        android:layout_gravity="center_horizontal"
        android:textSize="50dp"/>

    <ListView
        android:id="@+id/list_favorites"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="250dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/price"
            android:textSize="40dp"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="$0"
            android:textSize="40dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:id="@+id/orderB"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:backgroundTint="#bc270d"
        android:layout_marginTop="20dp"
        android:onClick="makeOrder"/>


</LinearLayout>
